# AcaJupyterHubSpawner

./: .dockerignore  .gitignore  Dockerfile  Pipfile  acaspawner_test.py  configproxy.js  jupyterhub_config.py  pyproject.toml  requirements.txt
DevOps/: container-apps-env.bicep  container-registry.bicep  deploy.azcli  log-workspace.bicep  main.bicep  managed-identity.bicep  start.azcli
acaspawner/: README.md  __init__.py  _version.py  acaspawner.py
